Se añade insert en el contenedor el ID_HAYA  de persona y contrato
Former-commit-id: ba0b24e00937dd705ce27bcb9d175029df1743a5